# OllamaGraphRAGPoC

./: .gitignore  basicneo4j.py  config.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
