[project]
name = "ollama-rag"
version = "0.1.0"
description = "Simple RAG using Ollama as LLM engine"
authors = [{ name = "Alan Tan", email = "alan@alantan.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "ollama>=0.4.7,<0.5",
    "nest-asyncio>=1.6.0,<2",
    "llama-index>=0.12.14,<0.13",
    "llama-index-llms-ollama>=0.5.0,<0.6",
    "llama-index-embeddings-ollama>=0.5.0,<0.6",
    "qdrant-client>=1.13.1,<2",
    "llama-index-graph-stores-neo4j>=0.4.6,<0.5",
    "llama-index-vector-stores-redis>=0.4.0,<0.5",
    "pydantic>=2.10.6,<3",
    "pydantic-settings>=2.7.1,<3",
    "neo4j>=5.27.0,<6",
]
